# django-prices-openexchangerates

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  pytest.ini  setup.py  test_settings.py  tox.ini  travis.yml
.github/workflows/: build.yml  codecov.yml  prepare_release.yml  publish.yml  test.yml  tox.yml
django_prices_openexchangerates/: __init__.py  admin.py  apps.py  currencies.py  models.py  tasks.py  tests.py  utils.py
django_prices_openexchangerates/management/commands/: update_exchange_rates.py
django_prices_openexchangerates/migrations/: 0001_initial.py  0002_auto_20160329_0702.py  0003_auto_20161018_0707.py  0004_auto_20170316_0944.py  0005_auto_20190124_1008.py
django_prices_openexchangerates/templatetags/: currency_conversion.py  prices_multicurrency.py  prices_multicurrency_i18n.py
tests/: settings.py  test_openexchangerates.py  tests.py
